{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 207,
  "lineage": "7b896067-4436-79a1-2b2c-471732de86bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5247d4d01653d09",
            "arn": "arn:aws:ec2:eu-west-1:938771547697:instance/i-0ada1d173e1e5174c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ada1d173e1e5174c",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07e3e1061b7f8ec41",
            "private_dns": "ip-10-0-10-67.eu-west-1.compute.internal",
            "private_ip": "10.0.10.67",
            "public_ip": "34.243.205.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02d0560d9c4ddea7b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084434e0db8ffd1e4",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04b0f43da6d54b353",
              "sg-0a9fa0a40323b8ca2",
              "sg-0c8bfecc259ccda02"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.mysql",
            "aws_security_group.outbound",
            "aws_security_group.ssh",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webhost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5247d4d01653d09",
            "arn": "arn:aws:ec2:eu-west-1:938771547697:instance/i-010090edf82ddb2e8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010090edf82ddb2e8",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cce34a6d28f2c970",
            "private_dns": "ip-10-0-10-33.eu-west-1.compute.internal",
            "private_ip": "10.0.10.33",
            "public_ip": "3.249.201.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03fa7e1c9bffcbbdf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084434e0db8ffd1e4",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04b0f43da6d54b353",
              "sg-096fa19a8b0405062",
              "sg-0c8bfecc259ccda02"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.http",
            "aws_security_group.outbound",
            "aws_security_group.ssh",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:938771547697:internet-gateway/igw-07d66a0cff036a0bc",
            "id": "igw-07d66a0cff036a0bc",
            "owner_id": "938771547697",
            "vpc_id": "vpc-082d0facb77758ff4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b58ad6c86d655111",
            "original_route_table_id": "rtb-0329c65a0cbaf87e7",
            "route_table_id": "rtb-0a77b1c93faee99c2",
            "vpc_id": "vpc-082d0facb77758ff4"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a77b1c93faee99c2",
            "owner_id": "938771547697",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d66a0cff036a0bc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-082d0facb77758ff4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:938771547697:security-group/sg-096fa19a8b0405062",
            "description": "Allow incoming port 80 (HTTP)",
            "egress": [],
            "id": "sg-096fa19a8b0405062",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_http",
            "name_prefix": "",
            "owner_id": "938771547697",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-082d0facb77758ff4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:938771547697:security-group/sg-0a9fa0a40323b8ca2",
            "description": "Allow incoming port 3306 (MYSQL)",
            "egress": [],
            "id": "sg-0a9fa0a40323b8ca2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_mysql",
            "name_prefix": "",
            "owner_id": "938771547697",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-082d0facb77758ff4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:938771547697:security-group/sg-0c8bfecc259ccda02",
            "description": "Allow all outgoing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8bfecc259ccda02",
            "ingress": [],
            "name": "sg_outbound",
            "name_prefix": "",
            "owner_id": "938771547697",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-082d0facb77758ff4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:938771547697:security-group/sg-04b0f43da6d54b353",
            "description": "Allow incoming port 22 (SSH)",
            "egress": [],
            "id": "sg-04b0f43da6d54b353",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_ssh",
            "name_prefix": "",
            "owner_id": "938771547697",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-082d0facb77758ff4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:938771547697:subnet/subnet-084434e0db8ffd1e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-084434e0db8ffd1e4",
            "map_public_ip_on_launch": false,
            "owner_id": "938771547697",
            "vpc_id": "vpc-082d0facb77758ff4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:938771547697:vpc/vpc-082d0facb77758ff4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013ad16afb18f8c9f",
            "default_route_table_id": "rtb-0a77b1c93faee99c2",
            "default_security_group_id": "sg-0b265bb9c42b8565b",
            "dhcp_options_id": "dopt-00979166",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-082d0facb77758ff4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a77b1c93faee99c2",
            "owner_id": "938771547697"
          }
        }
      ]
    }
  ]
}